# Pennylane_tutorial

./: 00_bell_state.ipynb  01_States_and_Gates.ipynb  02_Gaussian.ipynb  03_Backpropagation.ipynb  04_Hamiltonian_and_States.ipynb  05_Grover_Algorithm.ipynb  README.md  pyproject.toml
